# C-Projekt

./: .gitignore  AI.cpp  AI.h  CMakeLists.txt  README.md  laud.cpp  laud.h  main.cpp  manguvali.cpp  manguvali.h
CLI/lib/: laud.h
CLI/src/: AI.cpp  laud.cpp  manguvali.cpp
GUI/lib/: AI.h  avalehtsisu.h  lauavaliksisu.h  mainwindow.h  mangulaudsisu.h  peaAken.h  valikuteleht.h
GUI/src/: avalehtSisu.cpp  avalehtSisu.ui  lauavaliksisu.cpp  lauavaliksisu.ui  main.cpp  mainwindow.cpp  mainwindow.ui  mangulaudsisu.cpp  mangulaudsisu.ui  peaAken.cpp  peaAken.ui  valikuteleht.cpp  valikuteleht.ui
include/: gui.h
lib/: AI.h  laud.h  manguvali.h
src/: AI.cpp  gui.cpp  laud.cpp  main.cpp  manguvali.cpp
